fixed spacing on form users#new

--- a/tably/app/assets/stylesheets/users.scss
+++ b/tably/app/assets/stylesheets/users.scss
@@ -1,3 +1,29 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*
+#user-signup {
+	text-align: center;
+}
+*/
+.form {
+	margin-top: 1em;
+	width: 9em;
+}
+.avatar-form {
+	margin: 0 auto;
+}
+
+.fileUpload {
+	position: relative;
+	overflow: hidden;
+	margin: 10px;
+}
+.fileUpload input.upload {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
